Relocated Logout functionality, Fixed navigation issue (Scrollbars showing up)

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -5,6 +5,8 @@ body,
 html {
     padding: 0;
     margin: 0;
+    overflow: hidden;
+    height: 100%;
 }
 
 /* ── SPA Page Transitions ── */
